# prefect-demo

./: README.md  pyproject.toml
src/: stock_price_prediction.py  stock_price_prediction_with_prefect.py
